--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/wilfredcloud/node-api/issues"
   },
-  "homepage": "https://github.com/wilfredcloud/node-api#readme"
+  "homepage": "https://github.com/wilfredcloud/node-api#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
